# impax_ifire

./: .gitignore  AUTHORS.rst  CITATION.rst  CODE_OF_CONDUCT.md  README.rst  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  test_in_container.yml  testing.yml
docs/: api.rst  conf.py  index.rst
docs/cmad/: calibration_plan.rst  measurement_algos.rst  related_docs.rst
docs/dev-guide/: dev_env.rst  docs.rst  maintainer_workflow.rst
docs/user-guide/: logger.rst
impax_ifire/: __init__.py
impax_ifire/calibration/: calibration.py
impax_ifire/data/calibration/: README.rst
impax_ifire/tests/: test_calibration.py  test_file_tools.py
impax_ifire/util/: exceptions.py  logger.py
